fix: fix visual bug causing top of jumbo to be cut off on mobile and laptop screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -227,7 +227,7 @@ body > footer {
 /* Home */
 .jumbotron {
     margin-top: 5.3rem;
-    height: 25vh;
+    height: 35vh;
     background: url('/media/hero-image-sm.png') no-repeat center;
 }
 
@@ -445,7 +445,7 @@ body > footer {
 @media screen and (min-width: 767px) {
     .jumbotron {
         margin-top: 4.4rem;
-        height: 70vh;
+        height: 90vh;
         background: url('/media/hero-image.png') no-repeat center;
     }
 
